[java] Minimal support for injections in string templates
IDEA-333006 Language injection in String templates

GitOrigin-RevId: 6ea1bd6460658db2cb767819710c3595f4cdaffb